style (UI/UX): add new styles at dropdown menu

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -89,6 +89,13 @@
 }
 
 @mixin adaptive($breakpoint) {
+    
+    @if $breakpoint == mobile-wide {
+        @media (min-width: rem(500)) {
+            @content;
+        }
+    }
+    
     @if $breakpoint == tablet {
         @media (min-width: rem(700)) {
             @content;
